; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_rename.c_test_refs_rename__name_collision.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_rename.c_test_refs_rename__name_collision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@g_repo = common dso_local global i32 0, align 4
@packed_head_name = common dso_local global i32 0, align 4
@packed_test_head_name = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_rename__name_collision() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = load i32, i32* @g_repo, align 4
  %4 = load i32, i32* @packed_head_name, align 4
  %5 = call i32 @git_reference_lookup(%struct.TYPE_6__** %1, i32 %3, i32 %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %8 = load i32, i32* @packed_test_head_name, align 4
  %9 = call i32 @git_reference_rename(%struct.TYPE_6__** %2, %struct.TYPE_6__* %7, i32 %8, i32 0, i32* null)
  %10 = call i32 @cl_git_fail(i32 %9)
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %12 = call i32 @git_reference_free(%struct.TYPE_6__* %11)
  %13 = load i32, i32* @g_repo, align 4
  %14 = load i32, i32* @packed_head_name, align 4
  %15 = call i32 @git_reference_lookup(%struct.TYPE_6__** %1, i32 %13, i32 %14)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @packed_head_name, align 4
  %21 = call i32 @cl_assert_equal_s(i32 %19, i32 %20)
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %23 = call i32 @git_reference_free(%struct.TYPE_6__* %22)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(%struct.TYPE_6__**, i32, i32) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_reference_rename(%struct.TYPE_6__**, %struct.TYPE_6__*, i32, i32, i32*) #1

declare dso_local i32 @git_reference_free(%struct.TYPE_6__*) #1

declare dso_local i32 @cl_assert_equal_s(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
